--- a/searchdialog_base.ui
+++ b/searchdialog_base.ui
@@ -7,57 +7,41 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>550</width>
-    <height>553</height>
+    <width>379</width>
+    <height>366</height>
    </rect>
   </property>
   <property name="windowTitle" >
    <string>Find Events - KOrganizer</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout_2" >
+  <layout class="QGridLayout" name="gridLayout_3" >
    <item row="0" column="0" >
-    <layout class="QHBoxLayout" >
-     <property name="spacing" >
-      <number>6</number>
+    <widget class="QLabel" name="mSearchLabel" >
+     <property name="text" >
+      <string>&amp;Search for:</string>
      </property>
-     <property name="margin" >
-      <number>0</number>
+     <property name="wordWrap" >
+      <bool>false</bool>
      </property>
-     <item>
-      <widget class="QLabel" name="mSearchLabel" >
-       <property name="text" >
-        <string>&amp;Search for:</string>
-       </property>
-       <property name="wordWrap" >
-        <bool>false</bool>
-       </property>
-       <property name="buddy" >
-        <cstring>mSearchEdit</cstring>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLineEdit" name="mSearchEdit" >
-       <property name="text" >
-        <string>*</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
+     <property name="buddy" >
+      <cstring>mSearchEdit</cstring>
+     </property>
+    </widget>
    </item>
-   <item row="1" column="0" >
+   <item row="0" column="1" colspan="2" >
+    <widget class="QLineEdit" name="mSearchEdit" >
+     <property name="text" >
+      <string>*</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0" colspan="2" >
     <widget class="QGroupBox" name="mSearchTypeGroup" >
      <property name="title" >
       <string>Search For</string>
      </property>
-     <layout class="QGridLayout" >
-      <property name="margin" >
-       <number>11</number>
-      </property>
-      <property name="spacing" >
-       <number>6</number>
-      </property>
-      <item row="0" column="0" >
+     <layout class="QVBoxLayout" name="verticalLayout" >
+      <item>
        <widget class="QCheckBox" name="mEventsCheck" >
         <property name="text" >
          <string>&amp;Events</string>
@@ -67,7 +51,14 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="1" >
+      <item>
+       <widget class="QCheckBox" name="mJournalsCheck" >
+        <property name="text" >
+         <string>&amp;Journal entries</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <widget class="QCheckBox" name="mTodosCheck" >
         <property name="text" >
          <string>To-&amp;dos</string>
@@ -77,44 +68,55 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="2" >
-       <widget class="QCheckBox" name="mJournalsCheck" >
+     </layout>
+    </widget>
+   </item>
+   <item row="1" column="2" >
+    <widget class="QGroupBox" name="mSearchGroup" >
+     <property name="title" >
+      <string>Search In</string>
+     </property>
+     <layout class="QGridLayout" name="gridLayout" >
+      <item row="0" column="0" >
+       <widget class="QCheckBox" name="mCategoryCheck" >
         <property name="text" >
-         <string>&amp;Journal entries</string>
+         <string>Cate&amp;gories</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1" >
+       <widget class="QCheckBox" name="mLocationCheck" >
+        <property name="text" >
+         <string>Locations</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0" >
+       <widget class="QCheckBox" name="mDescriptionCheck" >
+        <property name="text" >
+         <string>Desc&amp;riptions</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1" >
+       <widget class="QCheckBox" name="mSummaryCheck" >
+        <property name="text" >
+         <string>Su&amp;mmaries</string>
+        </property>
+        <property name="checked" >
+         <bool>true</bool>
         </property>
        </widget>
       </item>
      </layout>
     </widget>
    </item>
-   <item row="2" column="0" >
+   <item row="2" column="0" colspan="3" >
     <widget class="QGroupBox" name="mDateRangeGroup" >
      <property name="title" >
       <string>Date Range</string>
      </property>
-     <layout class="QGridLayout" >
-      <property name="margin" >
-       <number>11</number>
-      </property>
-      <property name="spacing" >
-       <number>6</number>
-      </property>
-      <item row="1" column="0" colspan="4" >
-       <widget class="QCheckBox" name="mInclusiveCheck" >
-        <property name="text" >
-         <string>E&amp;vents have to be completely included</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1" >
-       <widget class="KPIM::KDateEdit" name="mStartDate" >
-        <item>
-         <property name="text" >
-          <string>2006-09-28</string>
-         </property>
-        </item>
-       </widget>
-      </item>
+     <layout class="QGridLayout" name="gridLayout_2" >
       <item row="0" column="0" >
        <widget class="QLabel" name="mStartDateLabel" >
         <property name="text" >
@@ -128,11 +130,17 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="3" >
-       <widget class="KPIM::KDateEdit" name="mEndDate" >
+      <item row="0" column="1" >
+       <widget class="KPIM::KDateEdit" name="mStartDate" >
+        <property name="sizePolicy" >
+         <sizepolicy vsizetype="Fixed" hsizetype="Preferred" >
+          <horstretch>1</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
         <item>
          <property name="text" >
-          <string>2006-09-28</string>
+          <string>2008-08-18</string>
          </property>
         </item>
        </widget>
@@ -150,6 +158,28 @@
         </property>
        </widget>
       </item>
+      <item row="0" column="3" >
+       <widget class="KPIM::KDateEdit" name="mEndDate" >
+        <property name="sizePolicy" >
+         <sizepolicy vsizetype="Fixed" hsizetype="Preferred" >
+          <horstretch>1</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <item>
+         <property name="text" >
+          <string>2008-08-18</string>
+         </property>
+        </item>
+       </widget>
+      </item>
+      <item row="1" column="0" colspan="4" >
+       <widget class="QCheckBox" name="mInclusiveCheck" >
+        <property name="text" >
+         <string>E&amp;vents have to be completely included</string>
+        </property>
+       </widget>
+      </item>
       <item row="2" column="0" colspan="4" >
        <widget class="QCheckBox" name="mIncludeUndatedTodos" >
         <property name="text" >
@@ -163,46 +193,7 @@
      </layout>
     </widget>
    </item>
-   <item row="3" column="0" >
-    <widget class="QGroupBox" name="mSearchGroup" >
-     <property name="title" >
-      <string>Search In</string>
-     </property>
-     <layout class="QGridLayout" name="gridLayout" >
-      <item row="0" column="0" >
-       <widget class="QSplitter" name="splitter" >
-        <property name="orientation" >
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <widget class="QCheckBox" name="mSummaryCheck" >
-         <property name="text" >
-          <string>Su&amp;mmaries</string>
-         </property>
-         <property name="checked" >
-          <bool>true</bool>
-         </property>
-        </widget>
-        <widget class="QCheckBox" name="mDescriptionCheck" >
-         <property name="text" >
-          <string>Desc&amp;riptions</string>
-         </property>
-        </widget>
-        <widget class="QCheckBox" name="mCategoryCheck" >
-         <property name="text" >
-          <string>Cate&amp;gories</string>
-         </property>
-        </widget>
-        <widget class="QCheckBox" name="mLocationCheck" >
-         <property name="text" >
-          <string>Locations</string>
-         </property>
-        </widget>
-       </widget>
-      </item>
-     </layout>
-    </widget>
-   </item>
-   <item row="4" column="0" >
+   <item row="3" column="0" colspan="3" >
     <widget class="QWidget" native="1" name="mListViewParent" >
      <property name="sizePolicy" >
       <sizepolicy vsizetype="MinimumExpanding" hsizetype="Preferred" >
@@ -224,7 +215,6 @@
   </customwidget>
  </customwidgets>
  <tabstops>
-  <tabstop>mSearchEdit</tabstop>
   <tabstop>mEventsCheck</tabstop>
   <tabstop>mTodosCheck</tabstop>
   <tabstop>mJournalsCheck</tabstop>
@@ -232,8 +222,6 @@
   <tabstop>mEndDate</tabstop>
   <tabstop>mInclusiveCheck</tabstop>
   <tabstop>mIncludeUndatedTodos</tabstop>
-  <tabstop>mSummaryCheck</tabstop>
-  <tabstop>mCategoryCheck</tabstop>
  </tabstops>
  <includes>
   <include location="local" >libkdepim/kdateedit.h</include>
