--- a/searchdialog_base.ui
+++ b/searchdialog_base.ui
@@ -29,7 +29,7 @@
     </widget>
    </item>
    <item row="0" column="1" colspan="2" >
-    <widget class="QLineEdit" name="mSearchEdit" >
+    <widget class="KLineEdit" name="mSearchEdit" >
      <property name="text" >
       <string>*</string>
      </property>
