--- a/printing/calprintmonthconfig_base.ui
+++ b/printing/calprintmonthconfig_base.ui
@@ -166,6 +166,16 @@ p, li { white-space: pre-wrap; }
     </widget>
    </item>
    <item>
+    <widget class="QCheckBox" name="mSingleLineLimit" >
+     <property name="whatsThis" >
+      <string>Check this option to limit events to a single line.</string>
+     </property>
+     <property name="text" >
+      <string>Limit events in each day to a &amp;single line</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <spacer>
      <property name="orientation" >
       <enum>Qt::Vertical</enum>
